tests/e2e/semantics/nested_types7.story
function foo returns int[][]
	return [["foo"]]

a = foo()
